# Faisneis

./: .gitignore  README.md
backend/: .env.example  build.sh  pyproject.toml  railway.json  requirements.txt
backend/app/: config.py  main.py  schemas.py
backend/app/agent/: llm.py  pipeline.py  router.py  synthesize.py
backend/app/ingest/: akn_parser.py  chunker.py  oireachtas_client.py  run_ingest.py
backend/app/retrieval/: embeddings.py  vector_store.py
backend/app/stats/: cso_catalog.py  cso_client.py  jsonstat.py
backend/eval/: golden.jsonl  run_eval.py
backend/scripts/: migrate_to_pinecone.py  smoke.py  verify_llm.py
frontend/: .env.example  README.md  next.config.ts  package-lock.json
frontend/app/: api-client.ts  globals.css  layout.tsx  page.tsx
frontend/components/: AnswerView.tsx  LoadingState.tsx  Masthead.tsx  QuestionDesk.tsx  SourcesPanel.tsx  StatChart.tsx  TricolourStripe.tsx
