[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "faisneis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "lxml>=5.2",
    "pandas>=2.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastembed>=0.3",
    "pinecone>=3.0",
    "python-dotenv>=1.0",
    "google-genai>=2.0",
    "groq>=0.11",
    "ruff>=0.4",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[tool.ruff]
line-length = 100
target-version = "py311"
